syntax = "proto3";
package DomainServices.DocumentService;
option csharp_namespace = "DomainServices.DocumentService.Contracts";

import "Types.proto";
import "IdentitySchemas.proto";

message GetDocumentStatusRequest {
   string DocumentId = 1;
   cis.types.IdentitySchemes Mandant = 2;
}

message GetDocumentStatusResponse {
   string DocumentId = 1;
   string DocumentStatus = 2;
}